// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package user.service.v1;

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service UserInfo {
  rpc GetUserInfoByID(GetUserInfoReq) returns (GetUserInfoResp);
}

message GetUserInfoReq {
  int64 userId = 1 [(gogoproto.moretags) = 'form:"userId" validate:"required"'];
}

message GetUserInfoResp {
   int64 userId = 1 [(gogoproto.jsontag) = 'userId'];
   string email = 2 [(gogoproto.jsontag) = 'email'];
   string phone = 3 [(gogoproto.jsontag) = 'phone'];
   string username = 4 [(gogoproto.jsontag) = 'username'];
   string gender = 5 [(gogoproto.jsontag) = 'gender'];
   string nickname = 6 [(gogoproto.jsontag) = 'nickname'];
   string headPicUrl = 7 [(gogoproto.jsontag) = 'headPicUrl'];
   string wxOpenId  = 8 [(gogoproto.jsontag) = 'wxOpenId'];
   string unionId = 9 [(gogoproto.jsontag) = 'unionId'];
   string qqOpenId = 10 [(gogoproto.jsontag) = 'qqOpenId'];
   string authType = 11 [(gogoproto.jsontag) = 'authType'];
   string registerTime = 12 [(gogoproto.jsontag) = 'registerTime'];
   string lastLoginTime = 13 [(gogoproto.jsontag) = 'lastLoginTime'];
}
